feat: google login

--- a/DashBoard.html
+++ b/DashBoard.html
@@ -25,13 +25,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-                <a class="navbar-brand" href="#" title="HOME" style="margin-left: 25px">Travel <span>Partner</span></a>
+                <a class="navbar-brand" href="index.html" title="HOME" style="margin-left: 25px">Travel <span>Partner</span></a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right: 40px">
                 <ul class="nav navbar-nav navbar-right">
                     <li style="color: blue"><a href="index.html">Home</a></li>
-                    <li><a href="logout">Log Out</a></li>
+                    <li><a href="LogIn.html">Log Out</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </div>
