--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,7 @@
     <title>Travel Partner | About</title>
 	<style>
 		body {
-			background-image: url('header.png');
+			background-image: url('assets/header.png');
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
@@ -40,7 +40,7 @@
 			<div class="card-header" style="text-align: center; font-weight: 600;">
 				<h3>Shubham Shankaram</h3>
 				</div>
-			  <img class="card-img-top" style="padding: 30px; border-radius: 50%;" src="shubham.jpg" style="border-radius:50%;" alt="Card image cap"  width="200" height="400"/>
+			  <img class="card-img-top" style="padding: 30px; border-radius: 50%;" src="assets/shubham.jpg" style="border-radius:50%;" alt="Card image cap"  width="200" height="400"/>
 			  <div class="card-body">
 				<h5 class="card-title" style="text-align: center; padding: 10px;">19BCT0092</h5>
 				<h6 style="text-align: center;">Hii, I am Shubham Shankaram. I am 2nd year student at Vellore Institute of Technology, Vellore. </h6>
@@ -50,7 +50,7 @@
 		<div class="card-header" style="text-align: center;  font-weight: 600;">
 			<h3>Rajdeep Savani</h3>
 			</div>
-          <img class="card-img-top" style="padding: 30px; border-radius: 50%;" src="rajdeep.jpg" style="border-radius:50%;" alt="Card image cap"  width="200" height="400"/>
+          <img class="card-img-top" style="padding: 30px; border-radius: 50%;" src="assets/rajdeep.jpg" style="border-radius:50%;" alt="Card image cap"  width="200" height="400"/>
           <div class="card-body">
             <h5 class="card-title" style="text-align: center;">19BCT0100</h5>
             <h6 style="text-align: center;">Hii, I am Savani Rajeep. I am 2nd year student at Vellore Institute of Technology, Vellore.</h6>
@@ -60,7 +60,7 @@
 			<div class="card-header" style="text-align: center;  font-weight: 600;">
 				<h3>Metuku Pranudeep</h3>
 				</div>
-			  <img class="card-img-top" style="padding: 30px; border-radius: 50%;" src="pranudeep.jpg" style="border-radius:50%;" alt="Card image cap"  width="200" height="400"/>
+			  <img class="card-img-top" style="padding: 30px; border-radius: 50%;" src="assets/pranudeep.jpg" style="border-radius:50%;" alt="Card image cap"  width="200" height="400"/>
 			  <div class="card-body">
 				<h5 class="card-title" style="text-align: center;">19BCT0233</h5>
         <h6 style="text-align: center;">Hii, I am Metuku Pranudeep. I am 2nd year student at Vellore Institute of Technology, Vellore.</h6>
