--- a/public/LogIn.html
+++ b/public/LogIn.html
@@ -44,7 +44,7 @@
         }
         
         body {
-            background-image: url('header.png');
+            background-image: url('/assets/header.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -158,7 +158,7 @@
 
                     <div class="form-group">
                         <div class="text-center social-btn">
-                            <a href="#" class="btn btn-danger btn-block"><i class="fa fa-google"></i> Sign in with <b>Google</b></a>
+                            <a href="/auth/google" class="btn btn-danger btn-block"><i class="fa fa-google"></i> Sign in with <b>Google</b></a>
                         </div>
                     </div>
 
