--- a/public/HaveRide.html
+++ b/public/HaveRide.html
@@ -200,7 +200,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right: 40px">
                     <ul class="nav navbar-nav navbar-right">
                         <li style="color: blue"><a href="index.html">Home</a></li>
-                        <li><a href="LogIn.html">LogIn</a></li>
+                        <li><a href="logout">Log Out</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
                 </div>
@@ -245,7 +245,7 @@
             </div>
 
             <div class="section"><span>3</span>Trip Locations</div>
-            <div class="inner-wrap">
+            <div class="inner-wrap" style="color: darkgrey;">
                 <label>Start place *</label>
                 <select name="start">
                     <option value="Select City"> Select City : </option>
