--- a/public/HaveRide.html
+++ b/public/HaveRide.html
@@ -214,7 +214,7 @@
     <div class="form-style-10">
         <h1>ENTER YOUR RIDE DETAILS<span></span></h1>
         
-        <form method="POST" action="HaveRide/addRide">
+        <form method="POST" action="ride/addRide">
 
 
             <div class="section"><span>1</span> Contact Details </div>
