--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,8 @@
                 <p class="header-sub-title">
                   it leaves you speecless, then turns your into a storyteller.
                 </p>
-                <a href="HaveRide.html"><button class="btn custom-btn">I have Ride</button></a>
-                <a href="NeedRide.html"><button class="btn custom-btn">I need Ride</button></a>
+                <a href="LogIn.html"><button class="btn custom-btn">Login to continue!</button></a>
+                <!-- <a href="NeedRide.html"><button class="btn custom-btn">I need Ride</button></a> -->
               </div>
             </div>
           </li>
