--- a/public/DashBoard.html
+++ b/public/DashBoard.html
@@ -46,11 +46,16 @@
                 <li class="slider-item" style="background-image: url('assets/images/car-sharing.png')">
                     <div class="intro container">
                         <div class="inner-intro">
+                            <div class="container-fluid">
+                                <div class="header-title">
+                                    <h1>Hello User, Welcome !</h1>
+                                </div>
+                            </div>
                             <h1 class="header-title">
                                 <span>traveling</span> always "good idea"
                             </h1>
                             <p class="header-sub-title">
-                                it leaves you speecless, then turns your into a storyteller.
+                                PLEASE SELECT THE SERVICE YOU REQUIRE :
                             </p>
                             <a href="HaveRide.html"><button class="btn custom-btn">I have Ride</button></a>
                             <a href="NeedRide.html"><button class="btn custom-btn">I need Ride</button></a>
