--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html class="noIE" lang="en-US">
-  <head>
+
+<head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Travel Partner | Home</title>
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -15,69 +13,52 @@
     <!-- <link rel="stylesheet" href="assets/css/owl.theme.css" /> -->
     <!-- <link rel="stylesheet" href="assets/css/flexslider.css" type="text/css" /> -->
     <link rel="stylesheet" href="assets/css/main.css" />
-  </head>
-  <body>
-    <nav
-      class="navbar navbar-default navbar-fixed-top"
-      style="background-color: #d2edfd"
-    >
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#bs-example-navbar-collapse-1"
-            aria-expanded="false">
+</head>
+
+<body>
+    <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #d2edfd">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a
-            class="navbar-brand"
-            href="index.html"
-            title="HOME"
-            style="margin-left: 25px"
-            >Travel <span>Partner</span></a>
-        </div>
+                <a class="navbar-brand" href="#" title="HOME" style="margin-left: 25px">Travel <span>Partner</span></a>
+            </div>
 
-        <div
-          class="collapse navbar-collapse"
-          id="bs-example-navbar-collapse-1"
-          style="padding-right: 40px">
-          <ul class="nav navbar-nav navbar-right">
-            <li style="color: blue"><a href="index.html">Home</a></li>
-            <li><a href="LogIn.html">LogIn</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right: 40px">
+                <ul class="nav navbar-nav navbar-right">
+                    <li style="color: blue"><a href="index.html">Home</a></li>
+                    <li><a href="LogIn.html">LogIn</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Home -->
     <div id="header">
-      <div class="flexslider">
-        <ul class="slides">
-          <li
-            class="slider-item"
-            style="background-image: url('assets/images/car-sharing.png')"
-          >
-            <div class="intro container">
-              <div class="inner-intro">
-                <h1 class="header-title">
-                  <span>traveling</span> always "good idea"
-                </h1>
-                <p class="header-sub-title">
-                  it leaves you speecless, then turns your into a storyteller.
-                </p>
-                <a href="LogIn.html"><button class="btn custom-btn">Login to continue!</button></a>
-                <!-- <a href="NeedRide.html"><button class="btn custom-btn">I need Ride</button></a> -->
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
+        <div class="flexslider">
+            <ul class="slides">
+                <li class="slider-item" style="background-image: url('assets/images/car-sharing.png')">
+                    <div class="intro container">
+                        <div class="inner-intro">
+                            <h1 class="header-title">
+                                <span>traveling</span> always "good idea"
+                            </h1>
+                            <p class="header-sub-title">
+                                it leaves you speecless, then turns your into a storyteller.
+                            </p>
+                            <a href="LogIn.html"><button class="btn custom-btn">Login to continue!</button></a>
+                            <!-- <a href="NeedRide.html"><button class="btn custom-btn">I need Ride</button></a> -->
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
