fixed: routes for home

--- a/public/HaveRide.html
+++ b/public/HaveRide.html
@@ -191,13 +191,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html" title="HOME" style="margin-left: 25px">Travel
+                    <a class="navbar-brand" href="home" title="HOME" style="margin-left: 25px">Travel
                         <span>Partner</span></a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right: 40px">
                     <ul class="nav navbar-nav navbar-right">
-                        <li style="color: blue"><a href="index.html">Home</a></li>
+                        <li style="color: blue"><a href="home">Home</a></li>
                         <li><a href="logout">Log Out</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
