--- a/public/about.html
+++ b/public/about.html
@@ -70,7 +70,7 @@
     </section>
     <section>
       <div class="col text-center">
-        <a class="btn btn-primary" href="index.html" role="button">Home</a>
+        <a class="btn btn-primary" href="home" role="button">Home</a>
       </div>
     </section>
     <section>
