--- a/public/home.html
+++ b/public/home.html
@@ -30,7 +30,7 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right: 40px">
                 <ul class="nav navbar-nav navbar-right">
-                    <li style="color: blue"><a href="index.html">Home</a></li>
+                    <li style="color: blue"><a href="#">Home</a></li>
                     <li><a href="LogIn.html">LogIn</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
